[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/factory/factory.gd" type="Script" id=1]
[ext_resource path="res://scenes/factory/tapis.tscn" type="PackedScene" id=2]

[node name="Factory" type="Node2D"]
script = ExtResource( 1 )

[node name="Tapis" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 32 )

[node name="Tapis2" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 96 )

[node name="Tapis3" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 160 )

[node name="Tapis4" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 224 )

[node name="Tapis5" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 288 )

[node name="Tapis6" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 352 )

[node name="Tapis7" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 416 )

[node name="Tapis8" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 480 )

[node name="Tapis9" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 544 )

[node name="Tapis10" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 608 )

[node name="Tapis11" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 736 )

[node name="Tapis12" parent="." instance=ExtResource( 2 )]
position = Vector2( 32, 672 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true
